<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_StateMachine" Id="{ded19d99-ece4-4abc-8fa3-9314257f1b4b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_StateMachine :
(
  cIdle := 0,
  cStarting,
  cExecute,
  cStopping,
  cStopped,
  cAborting,
  cAborted,
  cClearing,
  cResetting,
  cStateNotAvailable,
  cInitialization        
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>